--- a/Research.bib
+++ b/Research.bib
@@ -143,3 +143,34 @@
   year={2007},
   publisher={Elsevier}
 }
+
+@inproceedings{Anderson:1990:LPL:110382.110385,
+ author = {Anderson, E. and Bai, Z. and Dongarra, J. and Greenbaum, A. and McKenney, A. and Du Croz, J. and Hammarling, S. and Demmel, J. and Bischof, C. and Sorensen, D.},
+ title = {LAPACK: A Portable Linear Algebra Library for High-performance Computers},
+ booktitle = {Proceedings of the 1990 ACM/IEEE Conference on Supercomputing},
+ series = {Supercomputing '90},
+ year = {1990},
+ isbn = {0-89791-412-0},
+ location = {New York, New York, USA},
+ pages = {2--11},
+ numpages = {10},
+ url = {http://dl.acm.org/citation.cfm?id=110382.110385},
+ acmid = {110385},
+ publisher = {IEEE Computer Society Press},
+ address = {Los Alamitos, CA, USA},
+}
+
+@article{opencl,
+author = {G. Shi and D. Gohara and J. E. Stone},
+journal = {Computing in Science \& Engineering},
+title = {OpenCL: A Parallel Programming Standard for Heterogeneous Computing Systems},
+year = {2010},
+volume = {12},
+number = {},
+pages = {66-73},
+keywords={},
+doi = {10.1109/MCSE.2010.69},
+url = {doi.ieeecomputersociety.org/10.1109/MCSE.2010.69},
+ISSN = {1521-9615},
+month={04}
+}
